@@ -16,7 +16,9 @@ class Prawn::Table::Cell::Text
           height: spanned_content_height + FPTolerance,
           at: [0, @pdf.cursor]).render
       end
-      logger.error %(the table cell on page #{@pdf.page_number} has been truncated; Asciidoctor PDF does not support table cell content that exceeds the height of a single page) unless remaining_text.empty? || @pdf.scratch?
+      unless remaining_text.empty? || @pdf.scratch?
+        logger.error message_with_context %(the table cell on page #{@pdf.page_number} has been truncated; Asciidoctor PDF does not support table cell content that exceeds the height of a single page), source_location: @source_location
+      end
     end
   end
 
